--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.13.1",
     "react-devtools": "^4.10.1",
     "react-native": "0.63.2",
+    "react-native-fbsdk": "^3.0.0",
     "react-native-windows": "^0.63.0-0"
   },
   "devDependencies": {
