--- a/windows/demo/demo.vcxproj.filters
+++ b/windows/demo/demo.vcxproj.filters
@@ -20,6 +20,8 @@
     <ClInclude Include="ReactPackageProvider.h" />
     <ClInclude Include="AutolinkedNativeModules.g.h" />
     <ClInclude Include="MediaStreaming.h" />
+    <ClInclude Include="api.h" />
+    <ClInclude Include="d3d11interop.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\Wide310x150Logo.scale-200.png">
